--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,14 @@
     font-size: 200%;
 }
 
+.navbar.fixed-bottom{
+    border-top: 3px solid black;
+}
+
+.navbar.navbar-expand-lg{
+    border-bottom: 3px solid black;
+}
+
 .navicons{
     display: flex;
     flex-direction: row;
@@ -19,6 +27,11 @@
     width: 100%;
     height: 100%;
 }
+
+.login{
+    margin-top: 20vh;
+}
+
 body{
-    background-color: floralwhite;
+    background-color: white;
 }
