added temp timer placeholder screen that can be accessed through the bottom nav bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,3 +86,9 @@ body{
   #display-4{
     font-size: 5vw;
   }
+
+  .timerArea{
+    background-color: #ffcc00;
+    height: 70vh;
+    margin: 10%;
+  }
