--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,11 @@
 body {
-  background-color: #E0E1DD !important;
+  background-color: white !important;
 }
 
 .bx.bx-home,
 .bx.bx-time-five,
 .bx.bx-user-circle {
   font-size: 200%;
-}
-
-.navbar.fixed-bottom {
-  border-top: 3px solid black;
-}
-
-.navbar.navbar-expand-lg {
-  border-bottom: 3px solid black;
-  z-index: 2;
 }
 
 .navicons {
@@ -41,33 +32,15 @@ body {
   height: 50px;
 }
 
-.banner {
-  background-color: #1B263B;
-  color: #E0E1DD;
-  padding: 0px;
-  text-align: center;
-  position: absolute;
-  /* Absolute positioning relative to the header */
-  top: -40px;
-  /* Start hidden */
-  left: 0;
-  width: 100%;
-  z-index: 1;
-  /* Keep below header */
-  transition: top 0.5s ease;
-  /* Smooth transition */
-}
-
-.banner.show {
-  top: 60px;
-  /* Slide down to show */
-}
-
 #name-goes-here {
 
   font-size: 5vw;
   text-align: center;
   color: #1B263B;
+}
+
+.toast #name-goes-here {
+  font-size: 3.5vw
 }
 
 #email-goes-here {
@@ -101,7 +74,7 @@ body {
 }
 
 .custom-navbar {
-  background-color: #0D1B2A;
+  background-color: white;
 }
 
 .custom-navbar .navbar-brand,
@@ -110,16 +83,23 @@ body {
 .card-text,
 .navbar-toggler,
 a {
-  color: #E0E1DD !important;
+  color: black !important;
 }
 
 .card {
-  background-color: #0D1B2A;
+  background-color: rgb(248, 248, 248);
 }
 
 .btn-custom {
-  background-color: #1B263B;
-  border: 0.1px solid rgb(224, 225, 221, 0.5);
+  background-color: #5787f6;
 }
 
+.card{
+  border:none;
+}
+
+.start-button a{
+  text-align: center;
+  width: 100%;
+}
 
