--- a/styles/style.css
+++ b/styles/style.css
@@ -10,15 +10,17 @@ body {
 
 .navicons {
   display: flex;
+  padding: 0;
   flex-direction: row;
   color: black;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
   justify-content: space-evenly;
   width: 100%;
   height: 100%;
 }
+
 
 .login {
   margin-top: 15vh;
@@ -74,10 +76,10 @@ body {
 }
 
 .custom-navbar {
-  background-color: white;
+  background-color: #ffffff;
 }
 
-.custom-navbar .navbar-brand,
+.custom-navbar,
 .nav-item .nav-link,
 .card-title,
 .card-text,
@@ -105,4 +107,27 @@ body {
 
 .start-button {
   color: white;
+}
+
+
+.icon-circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px; 
+  height: 40px; 
+  border-radius: 40px; 
+  background-color: #507093; 
+
+}
+
+.icon-circle i {
+  font-size: 24px; 
+  color: white; 
+}
+.navbar-brandft{
+
+  margin-top: 5%;
+  margin-left: 0%;
+  padding: none;
 }
