--- a/styles/style.css
+++ b/styles/style.css
@@ -10,22 +10,15 @@ body {
 
 .navicons {
   display: flex;
-  flex-direction: row;
   color: black;
-  align-items: center;
-  justify-content: center;
   text-align: center;
   justify-content: space-evenly;
+  align-items: center;
   width: 100%;
-  height: 100%;
 }
 
 .login {
   margin-top: 15vh;
-}
-
-.navicons {
-  height: 50px;
 }
 
 #name-goes-here {
@@ -89,11 +82,11 @@ body {
   background-color: #4753b3;
 }
 
-.card{
-  border:none;
+.card {
+  border: none;
 }
 
-.start-button a{
+.start-button a {
   text-align: center;
   width: 100%;
   color: white;
@@ -101,4 +94,27 @@ body {
 
 .start-button {
   color: white;
+}
+
+.dropdown .btn-custom{
+  border-color: transparent !important;
+}
+
+.dropdown .dropdown-item:hover{
+  background-color: #4753b3;
+  color: white;
+}
+
+.preset-timer{
+  position: fixed;
+  margin-top: 9rem;
+  width: 90%;
+  margin-left: 5%;
+}
+
+#addTimerButton{
+  float:right;
+  margin-right:2%;
+  background-color:transparent;
+  font-size: 100%;
 }
