--- a/styles/style.css
+++ b/styles/style.css
@@ -10,16 +10,17 @@ body {
 
 .navicons {
   display: flex;
+  padding: 0;
   flex-direction: row;
   color: black;
   align-items: center;
   justify-content: center;
+  justify-content: space-around;
   text-align: center;
   justify-content: space-evenly;
-  align-items: center;
   width: 100%;
+  height: 100%;
 }
-
 
 .login {
   margin-top: 15vh;
@@ -98,4 +99,46 @@ body {
 
 .start-button {
   color: white;
+}
+
+.dropdown .btn-custom{
+  border-color: transparent !important;
+}
+
+.dropdown .dropdown-item:hover{
+  background-color: #4753b3;
+  color: white;
+}
+
+.preset-timer{
+  position: fixed;
+  margin-top: 9rem;
+  width: 90%;
+  margin-left: 5%;
+}
+
+#addTimerButton{
+  float:right;
+  margin-right:2%;
+  background-color:transparent;
+  font-size: 100%;
+}
+
+.icon-circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px; 
+  height: 40px; 
+  border-radius: 40px; 
+  background-color: #507093; 
+}
+.icon-circle i {
+  font-size: 24px; 
+  color: white; 
+}
+.navbar-brandft{
+  margin-top: 5%;
+  margin-left: 0%;
+  padding: none;
 }
