--- a/styles/style.css
+++ b/styles/style.css
@@ -131,8 +131,9 @@ body {
   width: 80px; 
   height: 40px; 
   border-radius: 40px; 
-  background-color: #507093; 
+  background-color: #417ab8; 
 }
+
 .icon-circle i {
   font-size: 24px; 
   color: white; 
@@ -141,4 +142,8 @@ body {
   margin-top: 5%;
   margin-left: 0%;
   padding: none;
+}
+
+.welcome-text{
+  margin-bottom: 5%;
 }
