added arrays for friends and pending friends when user is created and added form for adding to pending friends on profile page (currently nonfuctional)

--- a/styles/style.css
+++ b/styles/style.css
@@ -148,3 +148,10 @@ body {
   margin-bottom: 5%;
 }
 
+.friendsArea{
+  margin: 20%;
+  text-align: center;
+}
+.form-label-friend{
+  font-size: 5vw;
+}
