--- a/styles/style.css
+++ b/styles/style.css
@@ -1,74 +1,6 @@
+/* General Styles */
 body {
   background-color: white !important;
-}
-
-.bx.bx-home,
-.bx.bx-time-five,
-.bx.bx-user-circle {
-  font-size: 200%;
-}
-
-.navicons {
-  display: flex;
-  padding: 0;
-  flex-direction: row;
-  color: black;
-  align-items: center;
-  justify-content: center;
-  justify-content: space-around;
-  text-align: center;
-  justify-content: space-evenly;
-  width: 100%;
-  height: 100%;
-}
-
-.login {
-  margin-top: 15vh;
-}
-
-#name-goes-here {
-
-  font-size: 5vw;
-  text-align: center;
-  color: #1B263B;
-}
-
-.toast #name-goes-here {
-  font-size: 2vh;
-}
-
-#email-goes-here {
-
-  font-size: 5vw;
-  text-align: center;
-  color: #0D1B2A !important;
-}
-
-#profilePhoto {
-  background-color: #4753b3;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10vw;
-  width: 20%;
-  height: 20vw;
-}
-
-.toast-body {
-  font-size: 2vh;
-}
-
-.timerArea {
-  background-color: #ffcc00;
-  height: 70vh;
-  margin: 10%;
-}
-
-.card-img-overlay {
-  margin-top: 5%;
-}
-
-.custom-navbar {
-  background-color: #ffffff;
 }
 
 .custom-navbar,
@@ -79,26 +11,95 @@ body {
   color: black !important;
 }
 
+/* Font Icons */
+.bx.bx-home,
+.bx.bx-time-five,
+.bx.bx-user-circle {
+  font-size: 200%;
+}
+
+/* Navbar Styles */
+.custom-navbar {
+  background-color: #ffffff;
+}
+
+.navicons {
+  display: flex;
+  flex-direction: row;
+  color: black;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  text-align: center;
+}
+
+/* Login Section */
+.login {
+  margin-top: 15vh;
+}
+
+/* Profile & Name Display */
+#name-goes-here {
+  font-size: 5vw;
+  text-align: center;
+  color: #1B263B;
+}
+
+#email-goes-here {
+  font-size: 5vw;
+  text-align: center;
+  color: #0D1B2A !important;
+}
+
+#profilePhoto {
+  background-color: #4753b3;
+  margin: 10vw auto 0 auto;
+  width: 20%;
+  height: 20vw;
+}
+
+/* Toast Styles */
+.toast {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  min-width: 50vw; 
+}
+
+.toast-body {
+  font-size: 3vw;
+  display: inline;
+}
+
+
+.toast #name-goes-here {
+  font-size: 3vw;
+  display: inline;
+}
+
+
+/* Timer Area */
+.timerArea {
+  background-color: #ffcc00;
+  height: 70vh;
+  margin: 10%;
+}
+
+/* Card Styles */
 .card {
   background-color: #f4f4f4;
-}
-
-.btn-custom {
-  background-color: #4753b3;
-}
-
-.card {
   border: none;
 }
 
-.start-button a {
-  text-align: center;
-  width: 100%;
-  color: white;
+.card-img-overlay {
+  margin-top: 5%;
 }
 
-.start-button {
-  color: white;
+/* Button Styles */
+.btn-custom {
+  background-color: #4753b3;
 }
 
 .dropdown .btn-custom {
@@ -110,13 +111,6 @@ body {
   color: white;
 }
 
-.preset-timer {
-  position: fixed;
-  margin-top: 9rem;
-  width: 90%;
-  margin-left: 5%;
-}
-
 #addTimerButton {
   float: right;
   margin-right: 2%;
@@ -124,6 +118,17 @@ body {
   font-size: 100%;
 }
 
+.start-button {
+  color: white;
+}
+
+.start-button a {
+  text-align: center;
+  width: 100%;
+  color: white;
+}
+
+/* Icon Styles */
 .icon-circle {
   display: flex;
   align-items: center;
@@ -139,19 +144,9 @@ body {
   color: white;
 }
 
-.navbar-brandft {
-  margin-top: 5%;
-  margin-left: 0%;
-  padding: none;
-}
-
-.welcome-text {
-  margin-bottom: 5%;
-}
-
+/* Friends Section */
 .friendsArea {
   padding: 0vw;
-  margin: none;
   text-align: center;
 }
 
@@ -168,7 +163,6 @@ body {
   background-color: #e0e1dd;
 }
 
-
 .friends-section h3 {
   margin-top: 1vw;
   background-color: #417ab8;
@@ -176,15 +170,9 @@ body {
   padding: 1vw;
 }
 
-
-.friends-section input, .friends-section button {
+.friends-section input,
+.friends-section button {
   width: 100%;
-}
-
-.toast {
-  position: absolute;
-  top: 10px;
-  right: 10px;
 }
 
 #addFriendButton {
@@ -192,7 +180,20 @@ body {
   color: #ffffff;
 }
 
-.list-group-item {
-  padding: 1vw;
-  border: 5px solid #0D1B2A;
+/* Footer */
+.navbar-brandft {
+  margin-top: 5%;
+  padding: none;
+}
+
+.welcome-text {
+  margin-bottom: 5%;
+}
+
+/* Preset Timer */
+.preset-timer {
+  position: fixed;
+  margin-top: 9rem;
+  width: 90%;
+  margin-left: 5%;
 }
