--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: white !important;
 }
@@ -178,7 +177,8 @@ body {
   border-radius: 5px;
 }
 
-.friends-section input, .friends-section button {
+.friends-section input,
+.friends-section button {
   width: 100%;
 }
 
@@ -221,4 +221,10 @@ body {
 .highlight-today {
   font-weight: bold;
   color: #2506b0 !important;
+}
+
+#friendsEvents {
+  padding-top: 3%;
+  padding-bottom: 40%;
+  margin-left: 3%;
 }
