--- a/styles/style.css
+++ b/styles/style.css
@@ -113,7 +113,7 @@ body {
 
 .preset-timer {
   position: fixed;
-  margin-top: 9rem;
+  margin-top: 6rem;
   width: 90%;
   margin-left: 5%;
 }
@@ -239,3 +239,20 @@ body {
   box-shadow: 0 -.5rem 1rem rgba(0,0,0, .15);
 }
 
+.countdownTimer {
+  position: fixed;
+  margin-top: 2rem;
+  width: 90%;
+  margin-left: 5%;
+}
+
+#upHours,
+#upMinutes,
+#upSeconds,
+#downHours,
+#downMinutes,
+#downSeconds {
+  border: 2px solid black;
+  background-color: #f4f4f4;
+  border-radius: 5px;
+}
