--- a/styles/style.css
+++ b/styles/style.css
@@ -344,13 +344,14 @@ body::before {
   left: 0;
   width: 100%;
   height: 250px;
-  background: linear-gradient(to bottom, #2e3236, transparent);
+  background: linear-gradient(to bottom, #417ab8, transparent);
   z-index: -1;
 }
 
 .mdl-card.mdl-shadow--2dp.firebaseui-container.firebaseui-id-page-sign-in {
   box-shadow: none;
 }
+
 .mdl-card.mdl-shadow--2dp.firebaseui-container.firebaseui-id-page-password-sign-in{
   box-shadow: none;
 }
