--- a/styles/style.css
+++ b/styles/style.css
@@ -351,3 +351,26 @@ body::before {
 .mdl-card.mdl-shadow--2dp.firebaseui-container.firebaseui-id-page-sign-in {
   box-shadow: none;
 }
+
+.timerButtons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 67vh;
+  width: 100vw;
+}
+
+.timerButtons a{
+  font-size: 0.9rem;
+  margin-right: 2rem;
+}
+
+
+.presetTimerButtons {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100vw;
+}
+
+.presetTimerButtons a {
+  margin-right: 2rem;
+}
