Created display for create alarm page, Changed placeholders and time neighbors for countdown timers to have a leading zero for guidance and clarity, created placeholders for created preset timers which only show if finds a timer in the firestore (max of 5 timers)

--- a/styles/style.css
+++ b/styles/style.css
@@ -389,3 +389,15 @@ body::before {
 .mdl-card.mdl-shadow--2dp.firebaseui-container.firebaseui-id-page-password-sign-in{
   box-shadow: none;
 }
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
