--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ body {
 
 #name-goes-here,
 #email-goes-here {
-  font-size: 5vw;
+  font-size: 1.5rem;
   text-align: center;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -48,27 +48,27 @@ body {
   background-color: rgb(255, 255, 255, 0.9);
   padding: 0.2vw;
   border-radius: 5px;
-  font-size: 4vw;
+  font-size: 2rem;
   width: auto;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-align: center;
+  text-align: left;
 }
 
 
 @media only screen and (max-width: 400px) {
 
   .toast #name-goes-here {
-    font-size: 4vw;
+    font-size: 1rem;
     color: #000000;
   }
 
   .toast #time-goes-here {
-    font-size: 3vw;
+    font-size: 0.75rem;
     color: #000000;
    padding-left: 5vw;
   }
 .toast{
-  font-size: 4vw;
+  font-size: 1rem;
   width: auto;
 }
 
@@ -85,12 +85,16 @@ body {
 @media only screen and (min-width: 401px) {
 
   .toast #name-goes-here {
-  font-size: 4vw;
+  font-size: 1rem;
   color: #000000;
 }
 .toast #time-goes-here {
-  font-size: 2vw;
+  font-size: 1rem;
   color: #000000;
+}
+.toast {
+  font-size: 1rem;
+  width: 20%;
 }
 }
 
@@ -98,8 +102,8 @@ body {
 #profilePhoto {
   background-color: #417ab8;
   margin: 10vw auto 0;
-  width: 20%;
-  height: 20vw;
+  width: 12rem;
+  height: 12rem;
   border-radius: 50%;
 }
 
@@ -541,3 +545,68 @@ input[type="number"]::-webkit-outer-spin-button {
   color: white;
   background-color: #417ab8;;
 }
+
+.iconSection {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 3rem;
+}
+
+.icon i {
+  font-size: 4rem;
+  margin-bottom: 1.5rem;
+}
+
+.iconContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.3s ease;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.iconContainer:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+}
+
+.iconContainer i {
+  font-size: 4rem;
+  margin-bottom: 1.5rem;
+}
+
+.iconContainer p {
+  margin-top: 10px;
+  font-size: 1.1rem;
+  width: 80%;
+  color: #333;
+  transition: 0.3s ease;
+}
+
+.landingButton:hover {
+  background-color: #769bc2;
+  font-size: 140%;
+  transition: 0.5s ease;
+}
+
+.landingButton {
+  background-color: #417ab8;
+}
+
+.nav-link {
+  border-radius: 5px;
+}
+
+.nav-link.active {
+  font-weight: bold;
+  font-size: 105%;
+  border-radius: 5px !important;
+  transition: 0.1s ease;
+}
+
